--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,7 @@ before_script: pip install docker-compose
 
 script:
     - docker-compose run app sh -c "python manage.py test && flake8"
+
+    script:
+        # don't use .flake8 config for now, since don't need custom plugin
+        - flake8 --isolated --ignore=T484,T499,W503,E704,E231,E203 --max-line-length=119
